src/objects/MX_WB_EvaluacionPuntosEntrenamiento__c.object
<CustomObject>
    <fields>
        <fullName>MX_WB_Concepto__c</fullName>
        <label>Concepto</label>
        <referenceTo>CatalogoConceptos__c</referenceTo>
        <relationshipLabel>Evaluación - Puntos Entrenamiento</relationshipLabel>
        <relationshipName>EvaluacionPuntosEntrenamiento</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MX_WB_Evaluacion__c</fullName>
        <label>Evaluación</label>
        <referenceTo>Evaluacion__c</referenceTo>
        <relationshipLabel>Evaluacion - Puntos Entrenamiento</relationshipLabel>
        <relationshipName>EvaluacionPuntosEntrenamiento</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MX_WB_PuntoEntrenamiento__c</fullName>
        <label>Punto de entrenamiento</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Evaluación - Punto Entrenamiento</label>
    <nameField>
        <label>Nombre de Evaluación - Puntos Entrenamie</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Evaluación - Puntos Entrenamiento</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>